@@ -1,9 +1,7 @@
 package com.fishadminserver.Service;
 
-import com.fishadminserver.Entity.DailyAverageDTO;
-import com.fishadminserver.Entity.FishRecords;
-import com.fishadminserver.Entity.FishWater;
-import com.fishadminserver.Entity.WaterQualityRecords;
+import com.fishadminserver.Entity.*;
+import com.fishadminserver.Repository.DataCheckRepository;
 import com.fishadminserver.Repository.FishRecordsRepository;
 import com.fishadminserver.Repository.FishWaterRepository;
 import com.fishadminserver.Repository.WaterQualityRecordsRepository;
@@ -13,8 +11,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FishWaterService {
@@ -27,6 +25,11 @@ public class FishWaterService {
 
     @Autowired
     private  FishWaterRepository fishWaterRepository;
+
+    @Autowired
+    private DataCheckRepository dataCheckRepository;
+
+
 
 
     @Transactional
@@ -51,13 +54,7 @@ public class FishWaterService {
         fishWaterRepository.save(fishWater);
     }
 
-    @Transactional
-    public void updateImageForFishRecord(int fishId, String imageStr) {
-        fishRecordsRepository.findById(fishId).ifPresent(fish -> {
-            fish.setImageStr(imageStr);
-            fishRecordsRepository.save(fish);
-        });
-    }
+
     public List<FishRecords> getAllFishRecords() {
         return fishRecordsRepository.findAll();
     }
@@ -66,21 +63,21 @@ public class FishWaterService {
      * 查询最近 24 小时的数据
      */
     @Transactional(readOnly = true)
-    public List<FishWater> getRecentRecords() {
+    public List<FishWaterResponse> getRecentRecords() {
         LocalDateTime startTime = LocalDateTime.now().minusHours(24);
-        return fishWaterRepository.findRecentRecords(startTime);
+        List<FishWater> fishWaters = fishWaterRepository.findRecentRecords(startTime);
+        return FishWaterResponse.getFishWaterResponses(dataCheckRepository,fishWaters);
     }
 
     /**
      * 查询前 n 天的每日平均数据
      */
     @Transactional(readOnly = true)
-    public List<DailyAverageDTO> getDailyAverages(int days) {
+    public List<FishWaterResponse> getDailyAverages(int days) {
         LocalDate startDate = LocalDate.now().minusDays(days);
         LocalDateTime startDateTime = startDate.atStartOfDay(); // 设定起始时间
         List<Object[]> results = fishWaterRepository.findDailyAverages(startDateTime, days);
-
-        return results.stream().map(obj -> new DailyAverageDTO(
+        List<DailyAverageDTO> dailyAverageDTOS = results.stream().map(obj -> new DailyAverageDTO(
                 ((java.sql.Date) obj[0]).toLocalDate().atStartOfDay(), // 日期（转换为 LocalDateTime）
                 ((Number) obj[1]).doubleValue(), // 平均速度
                 ((Number) obj[2]).doubleValue(), // 平均体型
@@ -89,7 +86,28 @@ public class FishWaterService {
                 ((Number) obj[5]).doubleValue(), // 平均浑浊度
                 ((Number) obj[6]).doubleValue(), // 平均温度
                 ((Number) obj[7]).intValue()    // 水质状态
-        )).collect(Collectors.toList());
+        )).toList();
+        List<FishWater> fishWaters = new ArrayList<>();
+        for (DailyAverageDTO dailyAverageDTO : dailyAverageDTOS) {
+            FishWater fishWater = getFishWater(dailyAverageDTO);
+            fishWaters.add(fishWater);
+        }
+        return FishWaterResponse.getFishWaterResponses(dataCheckRepository,fishWaters);
+    }
+
+    private static FishWater getFishWater(DailyAverageDTO dailyAverageDTO) {
+        FishWater fishWater = new FishWater();
+        fishWater.setDate(dailyAverageDTO.getDate());
+        FishRecords fishRecords = new FishRecords();
+        fishRecords.setSize(dailyAverageDTO.getAvgSize().floatValue());
+        fishRecords.setSpeed(dailyAverageDTO.getAvgSpeed().floatValue());
+        fishWater.setFish(fishRecords);
+        WaterQualityRecords waterQualityRecords = new WaterQualityRecords();
+        waterQualityRecords.setTurbidity(dailyAverageDTO.getAvgTurbidity().floatValue());
+        waterQualityRecords.setTemperature(dailyAverageDTO.getAvgTemperature().floatValue());
+        waterQualityRecords.setPhValue(dailyAverageDTO.getAvgPhValue().floatValue());
+        fishWater.setWaterQuality(waterQualityRecords);
+        return fishWater;
     }
 
 
